--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "vercel": "^37.5.3"
   },
   "devDependencies": {
